yaml/simfrontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simfrontend
  namespace: default
spec:
  selector:
    app: simfrontend
  ports:
  - port: 80
    targetPort: 80
